--- a/index.html
+++ b/index.html
@@ -2,11 +2,303 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Глейси</title>
+    <title>Магазин мороженого Глейси</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+    <header class="page-header">
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link navigation-logo" href="index.html">
+              <img class="logo" src="" alt="Логотип магазина мороженого Глейси">
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">Каталог</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Доставка и оплата</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">О компании</a>
+          </li>
+        </ul>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link" href="tel:+78005558628">+7 800 555-86-28</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Поиск</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Вход</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Пусто</a>
+          </li>
+        </ul>
+      </nav>
+      <section class="slider">
+        <h1 class="visually-hidden">Магазин мороженого "Глейси"</h1>
+        <div class="slider-content-wrapper">
+          <div class="slider-content slider-content-current">
+            <h2 class="slider-content-title">Нежный пломбир с клубничным джемом</h2>
+            <p class="slider-content-description">Натуральное мороженое из свежих сливок и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.</p>
+            <button class="btn btn-white" type="button">Заказать</button>
+          </div>
+          <div class="slider-content">
+            <h2 class="slider-content-title">Сливочное мороженое со вкусом банана</h2>
+            <p class="slider-content-description">Сливочное мороженое с ярким банановым вкусом подарит вам свежесть и наслаждение даже в самый жаркий летний день.</p>
+            <button class="btn btn-white" type="button">Заказать</button>
+          </div>
+          <div class="slider-content">
+            <h2 class="slider-content-title">Карамельный пломбир с маршмеллоу</h2>
+            <p class="slider-content-description">Необычный сладкий дессерт с карамельный топпингом и кусочками зефира завоюет сердца сладкоежек всех возрастов.</p>
+            <button class="btn btn-white" type="button">Заказать</button>
+          </div>
+        </div>
+        <div class="slider-picture-wrapper">
+          <div class="slider-picture slider-picture-current">
+            <img class="slider-picture-icecream" src="" alt="Нежный пломбир с клубничным джемом">
+            <button class="slider-button slider-prev" type="button">
+              <span class="visually-hidden">Предыдущее фото</span>
+            </button>
+            <button class="slider-button slider-next" type="button">
+              <span class="visually-hidden">Следующее фото</span>
+            </button>
+            <img src="" alt="Сливочное мороженое со вкусом банана" class="slider-image slider-image-size">
+            <img src="" alt="Карамельный пломбир с маршмеллоу" class="slider-image slider-image-size">
+          </div>
+          <div class="slider-picture">
+            <img class="slider-picture-icecream" src="" alt="Сливочное мороженое со вкусом банана">
+            <button class="slider-button slider-prev" type="button">
+              <span class="visually-hidden">Предыдущее фото</span>
+            </button>
+            <button class="slider-button slider-next" type="button">
+              <span class="visually-hidden">Следующее фото</span>
+            </button>
+            <img src="" alt="Карамельный пломбир с маршмеллоу" class="slider-image slider-image-size">
+            <img src="" alt="Нежный пломбир с клубничным джемом" class="slider-image slider-image-size">
+          </div>
+          <div class="slider-picture">
+            <img class="slider-picture-icecream" src="" alt="Карамельный пломбир с маршмеллоу">
+            <button class="slider-button slider-prev" type="button">
+              <span class="visually-hidden">Предыдущее фото</span>
+            </button>
+            <button class="slider-button slider-next" type="button">
+              <span class="visually-hidden">Следующее фото</span>
+            </button>
+            <img src="" alt="Нежный пломбир с клубничным джемом" class="slider-image slider-image-size">
+            <img src="" alt="Сливочное мороженое со вкусом банана" class="slider-image slider-image-size">
+          </div>
+        </div>
+        <ol class="slider-pagination">
+          <li class="slider-pagination-item">
+            <button class="slider-pagination-btn slider-pagination-btn-current" type="button">
+              <span class="visually-hidden">Стиль 1</span>
+            </button>
+          </li>
+          <li class="slider-pagination-item">
+            <button class="slider-pagination-btn" type="button">
+              <span class="visually-hidden">Стиль 2</span>
+            </button>
+          </li>
+          <li class="slider-pagination-item">
+            <button class="slider-pagination-btn" type="button">
+              <span class="visually-hidden">Стиль 3</span>
+            </button>
+          </li>
+        </ol>
+        <ul class="social-list">
+          <li class="social-item">
+            <a class="social-link" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">ВКонтакте</span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="social-link" href="https://www.facebook.com/htmlacademy">
+              <span class="visually-hidden">Фейсбук</span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="social-link" href="https://www.instagram.com/htmlacademy/">
+              <span class="visually-hidden">Инстаграм</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </header>
+    <main class="main-index">
+      <section class="offers">
+        <h3 class="offers-title">Заказывайте мороженое и получайте подарки!</h3>
+        <div class="offers-raspberry">
+          <h4 class="offers-raspberry-title">Малинка даром!</h4>
+          <p class="offers-raspberry-description">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+          <button class="btn btn-white" type="button">Хочу подарок</button>
+        </div>
+        <div class="offers-marshmallow">
+          <h4 class="offers-marshmallow-title">Маршмеллоу даром!</h4>
+          <p class="offers-marshmallow-description">При покупке 2 кг пломбира, добавим в ваш заказ упаковку нежных зефирок совершенно бесплатно.</p>
+          <button class="btn btn-white" type="button">Хочу подарок</button>
+        </div>
+      </section>
+      <section class="product">
+        <h3 class="product-title">Попробуйте самые популярные вкусы нашего мороженого</h3>
+        <ul class="product-list">
+          <li class="product-item">
+            <a class="product-item-link" href="#">
+              <img class="product-image" src="#" alt="Малина">
+              <h5 class="product-item-title">Малинка</h5>
+              <p class="product-item-description">Сливочное мороженое с малиновым джемом</p>
+            </a>
+            <b class="product-item-price">310 ₽/кг</b>
+            <a class="btn-basket visually-hidden" href="#">Добавить в корзину</a>
+          </li>
+          <li class="product-item">
+            <a class="product-item-link" href="#">
+              <img class="product-image" src="#" alt="Фисташка">
+              <h5 class="product-item-title">Фисташка</h5>
+              <p class="product-item-description">Фисташковый пломбир с кусочками шоколада</p>
+            </a>
+            <b class="product-item-price">340 ₽/кг</b>
+            <a class="btn-basket visually-hidden" href="#">Добавить в корзину</a>
+          </li>
+          <li class="product-item">
+            <a class="product-item-link" href="#">
+              <img class="product-image" src="#" alt="Черника">
+              <h5 class="product-item-title">Черника</h5>
+              <p class="product-item-description">Крем-брюле с черничным джемом</p>
+            </a>
+            <b class="product-item-price">330 ₽/кг</b>
+            <a class="btn-basket visually-hidden" href="#">Добавить в корзину</a>
+          </li>
+          <li class="product-item">
+            <a class="product-item-link" href="#">
+              <img class="product-image" src="#" alt="Бабл-гам">
+              <h5 class="product-item-title">Бабл-гам</h5>
+              <p class="product-item-description">Ванильный пломбир со сладкой посыпкой</p>
+            </a>
+            <b class="product-item-price">320 ₽/кг</b>
+            <a class="btn-basket visually-hidden" href="#">Добавить в корзину</a>
+          </li>
+        </ul>
+      </section>
+      <section class="advantages">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <h3 class="advantages-title">Магазин Глэйси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <p class="advantages-description">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+          </li>
+          <li class="advantages-item">
+            <p class="advantages-description">Закупка ингредиентов производится только у проверенных фермерских хозяйств, с которыми нас связывает долговременное сотрудничество.</p>
+          </li>
+          <li class="advantages-item">
+            <p class="advantages-description">Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты и добавки произведены из натурального сырья.</p>
+          </li>
+          <li class="advantages-item">
+            <p class="advantages-description">Доставка нашего мороженого осуществляется в специальном термопаке, который не дает мороженому растаять и позволяет сохранить превосходный вкус.</p>
+          </li>
+        </ul>
+      </section>
+      <article class="blog">
+        <span class="blog-title">Новое в нашем блоге</span>
+        <a class="blog-link" href="#">10 способов сервировки фруктовых щербетов к столу</a>
+      </article>
+      <section class="subscribe">
+        <p class="subscribe-text">Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="POST">
+          <label class="visually-hidden" for="subscribe-email">Email</label>
+          <input class="subscribe-form-field" type="email" id="subscribe-email" name="subscribe-email" placeholder="email@example.com" required>
+          <button class="btn btn-red" type="button">Отправить</button>
+        </form>
+      </section>
+      <section class="delivery">
+        <div class="delivery-text">
+          <h3 class="delivery-title">Доставка любимого мороженого на дом</h3>
+          <p class="delivery-description">Хочется полакомиться любимым дессертом, но нет времени съездить в магазин? Закажите доставку мороженого на дом и курьер привезет вам ваш заказ в течение часа!</p>
+        </div>
+        <form class="delivery-form" action="https://echo.htmlacademy.ru/">
+          <p class="delivery-form-title">Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить заказ.</p>
+          <div class="delivery-form-date">
+            <span class="form-label">
+              <label for="delivery-date">Дата</label>
+              <button class="info" type="button">
+                <span class="visually-hidden">Посмотреть дополнительную информацию</span>
+              </button>
+            </span>
+            <input type="text"id="delivery-date" name="delivery-date" placeholder="01.04.2020">
+          </div>
+          <div class="delivery-form-phone">
+            <span class="form-label">
+              <label for="delivery-phone">Телефон</label>
+              <input type="text" id="delivery-phone" name="delivery-phone" placeholder="+7 800 999-00-00">
+            </span>
+          </div>
+          <div class="delivery-form-adress">
+            <span class="form-label">
+              <label for="delivery-address">Адрес</label>
+              <button class="info" type="button">
+                <span class="visually-hidden">Посмотреть дополнительную информацию</span>
+              </button>
+            </span>
+            <input type="text"id="delivery-address" name="delivery-address" placeholder="ул. Большая Конюшенная, 19/8">
+          </div>
+          <button class="btn btn-red" type="button">Отправить</button>
+        </form>
+      </section>
+      <section class="contacts">
+        <p class="contacts-text">Адрес главного офиса и офлайн-магазина:</p>
+        <address class="contacts-address">наб. Реки Карповки, <br>5 лит П, Санкт-Петербург</address>
+        <p class="contacts-text">Для заказов по телефону:</p>
+        <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        <p class="contacts-worktime">(с 10 до 20 ежедневно)</p>
+        <button class="btn btn-red" type="button">Форма обратной связи</button>
+      </section>
+    </main>
+    <footer class="page-footer">
+      <section class="footer-social">
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a class="footer-social-link" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">ВКонтакте</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="footer-social-link" href="https://www.facebook.com/htmlacademy">
+              <span class="visually-hidden">Фейсбук</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="footer-social-link" href="https://www.instagram.com/htmlacademy/">
+              <span class="visually-hidden">Инстаграм</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section class="footer-info">
+        <ul class="footer-info-list">
+          <li class="footer-info-item">
+            <a class="footer-supplier-link" href="#">Для поставщиков</a>
+          </li>
+          <li class="footer-info-item">
+            <a class="footer-info-link" href="#">Наши документы</a>
+          </li>
+          <li class="footer-info-item">
+            <a class="footer-info-link" href="#">О производстве</a>
+          </li>
+          <li class="footer-info-item">
+            <a class="footer-info-link" href="#">Экологические стандарты</a>
+          </li>
+        </ul>
+      </section>
+      <section class="footer-copyright">
+        <img src="#" alt="Логотип htmlacademy">
+        <p class="footer-copyright-text">Сделано в <a class="footer-copyright-link">.html academy</a> © 2021</p>
+      </section>
+    </footer>
   </body>
 </html>
+
