Добавил графику для всех страниц

--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Каталог мороженого Глейси</title>
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
   <header class="page-header">
@@ -10,7 +11,7 @@
       <ul class="navigation-list">
         <li class="navigation-item">
           <a class="navigation-link navigation-logo" href="index.html">
-            <img class="logo" src="" alt="Логотип магазина мороженого Глейси">
+            <img class="logo" src="img/logo-glacy.svg" alt="Логотип магазина мороженого Глейси" width="137" height="56">
           </a>
         </li>
         <li class="navigation-item">
@@ -154,7 +155,7 @@
       <ul class="product-list">
         <li class="product-item">
           <a class="product-item-link" href="#">
-            <img class="product-image" src="#" alt="Малина">
+            <img class="product-image" src="img/ice-cream-raspberry.jpg" alt="Малина" width="168" height="168">
             <h5 class="product-item-title">Малинка</h5>
             <p class="product-item-description">Сливочное мороженое с малиновым джемом</p>
           </a>
@@ -163,7 +164,7 @@
         </li>
         <li class="product-item">
           <a class="product-item-link" href="#">
-            <img class="product-image" src="#" alt="Фисташка">
+            <img class="product-image" src="img/ice-cream-pistachio.jpg" alt="Фисташка" width="168" height="168">
             <h5 class="product-item-title">Фисташка</h5>
             <p class="product-item-description">Фисташковый пломбир с кусочками шоколада</p>
           </a>
@@ -172,7 +173,7 @@
         </li>
         <li class="product-item">
           <a class="product-item-link" href="#">
-            <img class="product-image" src="#" alt="Черника">
+            <img class="product-image" src="img/ice-cream-blueberries.jpg" alt="Черника" width="168" height="168">
             <h5 class="product-item-title">Черника</h5>
             <p class="product-item-description">Крем-брюле с черничным джемом</p>
           </a>
@@ -181,7 +182,7 @@
         </li>
         <li class="product-item">
           <a class="product-item-link" href="#">
-            <img class="product-image" src="#" alt="Бабл-гам">
+            <img class="product-image" src="img/ice-cream-bubble.jpg" alt="Бабл-гам" width="168" height="168">
             <h5 class="product-item-title">Бабл-гам</h5>
             <p class="product-item-description">Ванильный пломбир со сладкой посыпкой</p>
           </a>
@@ -190,7 +191,7 @@
         </li>
         <li class="product-item">
           <a class="product-item-link" href="#">
-            <img class="product-image" src="#" alt="Ежевика">
+            <img class="product-image" src="img/ice-cream-blackberry.jpg" alt="Ежевика" width="168" height="168">
             <h5 class="product-item-title">Ежевика</h5>
             <p class="product-item-description">Сливочное мороженое с ежевичным джемом</p>
           </a>
@@ -199,7 +200,7 @@
         </li>
         <li class="product-item">
           <a class="product-item-link" href="#">
-            <img class="product-image" src="#" alt="Банан">
+            <img class="product-image" src="img/ice-cream-banana.jpg" alt="Банан" width="168" height="168">
             <h5 class="product-item-title">Банан</h5>
             <p class="product-item-description">Сливочный пломбир с банановым вкусом</p>
           </a>
@@ -208,7 +209,7 @@
         </li>
         <li class="product-item">
           <a class="product-item-link" href="#">
-            <img class="product-image" src="#" alt="Шоколадка">
+            <img class="product-image" src="img/ice-cream-chocolate.jpg" alt="Шоколадка" width="168" height="168">
             <h5 class="product-item-title">Шоколадка</h5>
             <p class="product-item-description">Классический шоколадный пломбир</p>
           </a>
@@ -217,7 +218,7 @@
         </li>
         <li class="product-item">
           <a class="product-item-link" href="#">
-            <img class="product-image" src="#" alt="Клубничка">
+            <img class="product-image" src="img/ice-cream-strawberry.jpg" alt="Клубничка" width="168" height="168">
             <h5 class="product-item-title">Клубничка</h5>
             <p class="product-item-description">Сливочный пломбир с клубничным вкусом</p>
           </a>
@@ -226,7 +227,7 @@
         </li>
         <li class="product-item">
           <a class="product-item-link" href="#">
-            <img class="product-image" src="#" alt="Лимон">
+            <img class="product-image" src="img/ice-cream-lemon.jpg" alt="Лимон" width="168" height="168">
             <h5 class="product-item-title">Лимон</h5>
             <p class="product-item-description">Освежающий лимонный сорбет</p>
           </a>
@@ -235,7 +236,7 @@
         </li>
         <li class="product-item">
           <a class="product-item-link" href="#">
-            <img class="product-image" src="#" alt="Ментол">
+            <img class="product-image" src="img/ice-cream-menthol.jpg" alt="Ментол" width="168" height="168">
             <h5 class="product-item-title">Ментол</h5>
             <p class="product-item-description">Сливочный пломбир с ментоловым сиропом</p>
           </a>
@@ -244,7 +245,7 @@
         </li>
         <li class="product-item">
           <a class="product-item-link" href="#">
-            <img class="product-image" src="#" alt="Орешек">
+            <img class="product-image" src="img/ice-cream-nut.jpg" alt="Орешек" width="168" height="168">
             <h5 class="product-item-title">Орешек</h5>
             <p class="product-item-description">Фисташковый пломбир с шоколадным сиропом</p>
           </a>
@@ -253,7 +254,7 @@
         </li>
         <li class="product-item">
           <a class="product-item-link" href="#">
-            <img class="product-image" src="#" alt="Крем-брюле">
+            <img class="product-image" src="img/ice-cream-brulee.jpg" alt="Крем-брюле" width="168" height="168">
             <h5 class="product-item-title">Крем-брюле</h5>
             <p class="product-item-description">Классическое крем-брюле </p>
           </a>
@@ -328,7 +329,7 @@
         </ul>
       </section>
       <section class="footer-copyright">
-        <img src="#" alt="Логотип htmlacademy">
+        <img src="img/logo-htmlacademy.svg" alt="Логотип htmlacademy" width="93" height="27">
         <p class="footer-copyright-text">Сделано в <a class="footer-copyright-link">.html academy</a> © 2021</p>
       </section>
     </footer>
