--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Магазин мороженого Глейси</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header class="page-header">
@@ -10,7 +11,7 @@
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link navigation-logo" href="index.html">
-              <img class="logo" src="" alt="Логотип магазина мороженого Глейси">
+              <img class="logo" src="img/logo-glacy.svg" alt="Логотип магазина мороженого Глейси" width="137" height="56">
             </a>
           </li>
           <li class="navigation-item">
@@ -61,37 +62,37 @@
         </div>
         <div class="slider-picture-wrapper">
           <div class="slider-picture slider-picture-current">
-            <img class="slider-picture-icecream" src="" alt="Нежный пломбир с клубничным джемом">
+            <img class="slider-picture-icecream" src="img/ice-cream-strawberry-jam.png" alt="Нежный пломбир с клубничным джемом" width="306" height="507">
             <button class="slider-button slider-prev" type="button">
               <span class="visually-hidden">Предыдущее фото</span>
             </button>
             <button class="slider-button slider-next" type="button">
               <span class="visually-hidden">Следующее фото</span>
             </button>
-            <img src="" alt="Сливочное мороженое со вкусом банана" class="slider-image slider-image-size">
-            <img src="" alt="Карамельный пломбир с маршмеллоу" class="slider-image slider-image-size">
+            <img src="img/ice-cream-butter.png" alt="Сливочное мороженое со вкусом банана" class="slider-image slider-image-size" width="66" height="150">
+            <img src="img/ice-cream-caramel-marshmellow.png" alt="Карамельный пломбир с маршмеллоу" class="slider-image slider-image-size" width="66" height="150">
           </div>
           <div class="slider-picture">
-            <img class="slider-picture-icecream" src="" alt="Сливочное мороженое со вкусом банана">
+            <img class="slider-picture-icecream" src="img/ice-cream-butter.png" alt="Сливочное мороженое со вкусом банана" width="306" height="507">
             <button class="slider-button slider-prev" type="button">
               <span class="visually-hidden">Предыдущее фото</span>
             </button>
             <button class="slider-button slider-next" type="button">
               <span class="visually-hidden">Следующее фото</span>
             </button>
-            <img src="" alt="Карамельный пломбир с маршмеллоу" class="slider-image slider-image-size">
-            <img src="" alt="Нежный пломбир с клубничным джемом" class="slider-image slider-image-size">
+            <img src="img/ice-cream-caramel-marshmellow.png" alt="Карамельный пломбир с маршмеллоу" class="slider-image slider-image-size" width="66" height="150">
+            <img src="img/ice-cream-strawberry-jam.png" alt="Нежный пломбир с клубничным джемом" class="slider-image slider-image-size" width="66" height="150">
           </div>
           <div class="slider-picture">
-            <img class="slider-picture-icecream" src="" alt="Карамельный пломбир с маршмеллоу">
+            <img class="slider-picture-icecream" src="img/ice-cream-caramel-marshmellow.png" alt="Карамельный пломбир с маршмеллоу" width="306" height="507">
             <button class="slider-button slider-prev" type="button">
               <span class="visually-hidden">Предыдущее фото</span>
             </button>
             <button class="slider-button slider-next" type="button">
               <span class="visually-hidden">Следующее фото</span>
             </button>
-            <img src="" alt="Нежный пломбир с клубничным джемом" class="slider-image slider-image-size">
-            <img src="" alt="Сливочное мороженое со вкусом банана" class="slider-image slider-image-size">
+            <img src="img/ice-cream-strawberry-jam.png" alt="Нежный пломбир с клубничным джемом" class="slider-image slider-image-size" width="66" height="150">
+            <img src="img/ice-cream-butter.png" alt="Сливочное мороженое со вкусом банана" class="slider-image slider-image-size" width="66" height="150">
           </div>
         </div>
         <ol class="slider-pagination">
@@ -149,7 +150,7 @@
         <ul class="product-list">
           <li class="product-item">
             <a class="product-item-link" href="#">
-              <img class="product-image" src="#" alt="Малина">
+              <img class="product-image" src="img/ice-cream-raspberry.jpg" alt="Малина" width="168" height="168">
               <h5 class="product-item-title">Малинка</h5>
               <p class="product-item-description">Сливочное мороженое с малиновым джемом</p>
             </a>
@@ -158,7 +159,7 @@
           </li>
           <li class="product-item">
             <a class="product-item-link" href="#">
-              <img class="product-image" src="#" alt="Фисташка">
+              <img class="product-image" src="img/ice-cream-pistachio.jpg" alt="Фисташка" width="168" height="168">
               <h5 class="product-item-title">Фисташка</h5>
               <p class="product-item-description">Фисташковый пломбир с кусочками шоколада</p>
             </a>
@@ -167,7 +168,7 @@
           </li>
           <li class="product-item">
             <a class="product-item-link" href="#">
-              <img class="product-image" src="#" alt="Черника">
+              <img class="product-image" src="img/ice-cream-blueberries.jpg" alt="Черника" width="168" height="168">
               <h5 class="product-item-title">Черника</h5>
               <p class="product-item-description">Крем-брюле с черничным джемом</p>
             </a>
@@ -176,7 +177,7 @@
           </li>
           <li class="product-item">
             <a class="product-item-link" href="#">
-              <img class="product-image" src="#" alt="Бабл-гам">
+              <img class="product-image" src="img/ice-cream-bubble.jpg" alt="Бабл-гам" width="168" height="168">
               <h5 class="product-item-title">Бабл-гам</h5>
               <p class="product-item-description">Ванильный пломбир со сладкой посыпкой</p>
             </a>
@@ -295,7 +296,7 @@
         </ul>
       </section>
       <section class="footer-copyright">
-        <img src="#" alt="Логотип htmlacademy">
+        <img src="img/logo-htmlacademy.svg" alt="Логотип htmlacademy" width="93" height="27">
         <p class="footer-copyright-text">Сделано в <a class="footer-copyright-link">.html academy</a> © 2021</p>
       </section>
     </footer>
