--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Каталог мороженого Глейси</title>
-  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <header class="page-header">
@@ -26,7 +26,7 @@
       </ul>
       <ul class="navigation-list navigation-user">
         <li class="navigation-item">
-          <a class="navigation-link" href="tel:+78005558628">+7 800 555-86-28</a>
+          <a class="navigation-phone" href="tel:+78005558628">+7 800 555-86-28</a>
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="#">
@@ -46,10 +46,10 @@
     <header class="inner-header">
       <ul class="breadcrumbs">
         <li class="breadcrumbs-item">
-          <a class="breadcrumbs" href="index.html">Главная</a>
+          <a class="breadcrumbs breadcrumbs-underline" href="index.html">Главная</a>
         </li>
         <li class="breadcrumbs-item">
-          <a class="breadcrumbs" href="catalog.html">Каталог</a>
+          <a class="breadcrumbs breadcrumbs-underline" href="catalog.html">Каталог</a>
         </li>
         <li class="breadcrumbs-item">
           <a class="breadcrumbs" href="#">Сливочное</a>
