Исправил, delivery-form, путь картинки и поле поиска

--- a/catalog.html
+++ b/catalog.html
@@ -29,9 +29,8 @@
           <a class="navigation-phone" href="tel:+78005558628">+7 800 555-86-28</a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="#">
-            <span class="visually-hidden">Поиск</span>
-          </a>
+          <input class="navigation-search" type="search" name="search">
+          <span class="visually-hidden">Поиск</span>
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="#">Вход</a>
