--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
             <a class="navigation-phone" href="tel:+78005558628">+7 800 555-86-28</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <span class="visually-hidden">Поиск</span>
-            </a>
+            <input class="navigation-search" type="search" name="search">
+            <span class="visually-hidden">Поиск</span>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">Вход</a>
@@ -232,7 +231,7 @@
             <h3 class="delivery-title">Доставка любимого мороженого на дом</h3>
             <p class="delivery-description">Хочется полакомиться любимым дессертом, но нет времени съездить в магазин? Закажите доставку мороженого на дом и курьер привезет вам ваш заказ в течение часа!</p>
           </div>
-          <form class="delivery-form" action="https://echo.htmlacademy.ru/">
+          <form class="delivery-form" action="https://echo.htmlacademy.ru/" method="post">
             <p class="delivery-form-title">Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить заказ.</p>
             <div class="delivery-form-date">
               <span class="form-label">
