--- a/catalog.html
+++ b/catalog.html
@@ -472,7 +472,7 @@
       </section>
       <section class="footer-copyright">
         <img class="footer-logo-htmlacademy" src="img/logo-htmlacademy.svg" alt="Логотип htmlacademy" width="93" height="27">
-        <p class="footer-copyright-text">Сделано в <a class="footer-copyright-link">.html academy</a> © 2021</p>
+        <p class="footer-copyright-text">Сделано в <a class="footer-copyright-link" aria-label="Ссылка на html academy">.html academy</a> © 2021</p>
       </section>
     </div>
   </footer>
