--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
         </section>
         <section class="footer-copyright">
           <img class="footer-logo-htmlacademy" src="img/logo-htmlacademy.svg" alt="Логотип htmlacademy" width="93" height="27">
-          <p class="footer-copyright-text">Сделано в <a class="footer-copyright-link">.html academy</a> © 2021</p>
+          <p class="footer-copyright-text">Сделано в <a class="footer-copyright-link" aria-label="Ссылка на html academy">.html academy</a> © 2021</p>
         </section>
       </div>
     </footer>
@@ -403,7 +403,7 @@
             </p>
             <p class="auth-group">
               <label class="visually-hidden" for="auth-email">Ваша почта</label>
-              <input class="auth-form-field field" type="email" id="auth-email" placeholder="email@example.com" aria-label="3">
+              <input class="auth-form-field field" type="email" id="auth-email" placeholder="email@example.com">
             </p>
             <p class="auth-group">
               <textarea class="auth-form-text field" name="text" placeholder="В свободной форме" rows="6"></textarea>
