--- a/catalog.html
+++ b/catalog.html
@@ -55,7 +55,7 @@
           </form>
         </li>
         <li class="navigation-item navigation-item-basket">
-          <a class="navigation-link navigation-basket" href="#"><svg class="basket-icon basket-icon-catalog" width="17" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M.646 1.156c0-.368.298-.666.667-.666H3.92c.318 0 .591.224.654.536l.545 2.723h10.535a.667.667 0 0 1 .654.792l-1.043 5.469v.005A1.97 1.97 0 0 1 13.3 11.6H6.976a1.97 1.97 0 0 1-1.963-1.586l-1.089-5.44a.662.662 0 0 1-.01-.056l-.54-2.696H1.313a.667.667 0 0 1-.667-.667Zm5.883 11.72a1.318 1.318 0 1 0 0 2.636 1.318 1.318 0 0 0 0-2.636Zm7.17 0a1.318 1.318 0 1 0 0 2.636 1.318 1.318 0 0 0 0-2.636Z" fill="#2D3440"/></svg>2 товара</a>
+          <a class="navigation-link navigation-basket" href="#"><svg class="basket-icon basket-icon-catalog" width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M.646 1.156c0-.368.298-.666.667-.666H3.92c.318 0 .591.224.654.536l.545 2.723h10.535a.667.667 0 0 1 .654.792l-1.043 5.469v.005A1.97 1.97 0 0 1 13.3 11.6H6.976a1.97 1.97 0 0 1-1.963-1.586l-1.089-5.44a.662.662 0 0 1-.01-.056l-.54-2.696H1.313a.667.667 0 0 1-.667-.667Zm5.883 11.72a1.318 1.318 0 1 0 0 2.636 1.318 1.318 0 0 0 0-2.636Zm7.17 0a1.318 1.318 0 1 0 0 2.636 1.318 1.318 0 0 0 0-2.636Z" fill="#2D3440"/></svg>2 товара</a>
           <div class="navigation-basket-buy show-basket">
             <h4 class="navigation-title">Корзина</h4>
             <ul class="basket-list">
@@ -403,7 +403,7 @@
           <ul class="pagination">
             <li class="pagination-item">
               <a class="pagination-link pagination-prev pagination-disabled">
-                <svg class="pagination-arrow pagination-arrow-prev" width="12" height="6" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.808.195a.667.667 0 0 0-.943.943l4.66 4.66a.665.665 0 0 0 .955 0l4.661-4.66A.667.667 0 0 0 10.2.195L6.003 4.39 1.808.195Z"/></svg>
+                <svg class="pagination-arrow pagination-arrow-prev" width="12" height="6" viewBox="0 0 12 6" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.808.195a.667.667 0 0 0-.943.943l4.66 4.66a.665.665 0 0 0 .955 0l4.661-4.66A.667.667 0 0 0 10.2.195L6.003 4.39 1.808.195Z"/></svg>
                 <span class="visually-hidden">Предыдущая страница</span>
               </a>
             </li>
@@ -424,7 +424,7 @@
             </li>
             <li class="pagination-item">
               <a class="pagination-link pagination-next" href="#">
-                <svg class="pagination-arrow pagination-arrow-next" width="12" height="6" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.808.195a.667.667 0 0 0-.943.943l4.66 4.66a.665.665 0 0 0 .955 0l4.661-4.66A.667.667 0 0 0 10.2.195L6.003 4.39 1.808.195Z"/></svg>
+                <svg class="pagination-arrow pagination-arrow-next" width="12" height="6" viewBox="0 0 12 6" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.808.195a.667.667 0 0 0-.943.943l4.66 4.66a.665.665 0 0 0 .955 0l4.661-4.66A.667.667 0 0 0 10.2.195L6.003 4.39 1.808.195Z"/></svg>
                 <span class="visually-hidden">Следующая страница</span>
               </a>
             </li>
