--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Каталог мороженого Глейси</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
 </head>
 <body>
   <header class="page-header">
@@ -109,120 +110,118 @@
       </header>
       <section class="catalog-products">
         <h2 class="visually-hidden">Сортировка по фильтрам</h2>
-        <form class="sorting" action="https://echo.htmlacademy.ru/" method="get">
-          <div class="sorting-wrapper">
-            <fieldset class="sorting-type">
-              <legend class="sorting-type-title">Сортировка:</legend>
-              <label class="visually-hidden" for="sorting-popular">Сортировка:</label>
-              <select class="select-control" name="sorting-popular" id="sorting-popular">
-                <option value="popular">по популярности</option>
-                <option value="cheap">сначала дешёвое</option>
-                <option value="expensive">сначала дорогое</option>
-              </select>
-            </fieldset>
-            <fieldset class="sorting-type">
-              <div class="range">
-                <div class="range-wrapper-inputs">
-                  <label class="catalog-filter-label">
-                  Цена: <input class="range-input" type="number" name="min-price" value="100"> ₽
-                  </label>
-                  <span class="range-dash">-</span>
-                  <label class="catalog-filter-label">
-                  <input class="range-input" type="number" name="max-price" value="500" style="width: 37px"> ₽
-                  </label>
-                </div>
-                <div class="range-wrapper">
-                  <div class="range-scale">
-                    <div class="range-bar" style="left: 32px; width: 72px">
-                      <button class="range-toggle toggle-min">
-                        <span class="visually-hidden">Изменить минимальную цену.</span>
-                      </button>
-                      <button class="range-toggle toggle-max">
-                        <span class="visually-hidden">Изменить максимальную цену.</span>
-                      </button>
-                    </div>
+        <div class="sorting-wrapper">
+          <fieldset class="sorting-type">
+            <legend class="sorting-type-title">Сортировка:</legend>
+            <label class="visually-hidden" for="sorting-popular">Сортировка:</label>
+            <select class="select-control" name="sorting-popular" id="sorting-popular">
+              <option value="popular">по популярности</option>
+              <option value="cheap">сначала дешёвое</option>
+              <option value="expensive">сначала дорогое</option>
+            </select>
+          </fieldset>
+          <fieldset class="sorting-type">
+            <div class="range">
+              <div class="range-wrapper-inputs">
+                <label class="catalog-filter-label">
+                Цена: <input class="range-input" type="number" name="min-price" value="100"> ₽
+                </label>
+                <span class="range-dash">-</span>
+                <label class="catalog-filter-label">
+                <input class="range-input" type="number" name="max-price" value="500"> ₽
+                </label>
+              </div>
+              <div class="range-wrapper">
+                <div class="range-scale">
+                  <div class="range-bar">
+                    <button class="range-toggle toggle-min">
+                      <span class="visually-hidden">Изменить минимальную цену.</span>
+                    </button>
+                    <button class="range-toggle toggle-max">
+                      <span class="visually-hidden">Изменить максимальную цену.</span>
+                    </button>
                   </div>
                 </div>
               </div>
-            </fieldset>
-            <fieldset class="sorting-type">
-              <legend class="sorting-type-title">Жирность:</legend>
-              <ul class="sorting-type-list">
-                <li class="sorting-type-item">
-                  <label class="control">
-                    <input class="visually-hidden control-input" type="radio" name="content-group" value="low-content">
-                    <span class="control-mark"></span>
-                    <span class="control-label">0%</span>
-                  </label>
-                </li>
-                <li class="sorting-type-item">
-                  <label class="control">
-                    <input class="visually-hidden control-input" type="radio" name="content-group" value="low-mid-content" checked>
-                    <span class="control-mark"></span>
-                    <span class="control-label">до 10%</span>
-                  </label>
-                </li>
-                <li class="sorting-type-item">
-                  <label class="control">
-                    <input class="visually-hidden control-input" type="radio" name="content-group" value="mid-content">
-                    <span class="control-mark"></span>
-                    <span class="control-label">до 30%</span>
-                  </label>
-                </li>
-                <li class="sorting-type-item">
-                  <label class="control">
-                    <input class="visually-hidden control-input" type="radio" name="content-group" value="high-content">
-                    <span class="control-mark"></span>
-                    <span class="control-label">выше 30%</span>
-                  </label>
-                </li>
-              </ul>
-            </fieldset>
-          </div>
-          <div class="sorting-wrapper">
-            <fieldset class="sorting-type">
-              <legend class="sorting-type-title">Наполнители:</legend>
-              <ul class="sorting-type-list">
-                <li class="sorting-type-item">
-                  <label class="control">
-                    <input class="visually-hidden control-input" type="checkbox" name="chocolate" checked>
-                    <span class="control-mark"></span>
-                    <span class="control-label">шоколадные</span>
-                  </label>
-                </li>
-                <li class="sorting-type-item sorting-type-item-indent">
-                  <label class="control">
-                    <input class="visually-hidden control-input" type="checkbox" name="sugar-powders" checked>
-                    <span class="control-mark"></span>
-                    <span class="control-label">сахарные посыпки</span>
-                  </label>
-                </li>
-                <li class="sorting-type-item">
-                  <label class="control">
-                    <input class="visually-hidden control-input" type="checkbox" name="fruits">
-                    <span class="control-mark"></span>
-                    <span class="control-label">фрукты</span>
-                  </label>
-                </li>
-                <li class="sorting-type-item">
-                  <label class="control">
-                    <input class="visually-hidden control-input" type="checkbox" name="syrups">
-                    <span class="control-mark"></span>
-                    <span class="control-label">сиропы</span>
-                  </label>
-                </li>
-                <li class="sorting-type-item">
-                  <label class="control">
-                    <input class="visually-hidden control-input" type="checkbox" name="jams">
-                    <span class="control-mark"></span>
-                    <span class="control-label">джемы</span>
-                  </label>
-                </li>
-              </ul>
-            </fieldset>
-            <button class="sorting-button" type="submit">Применить</button>
-          </div>
-        </form>
+            </div>
+          </fieldset>
+          <fieldset class="sorting-type">
+            <legend class="sorting-type-title">Жирность:</legend>
+            <ul class="sorting-type-list">
+              <li class="sorting-type-item">
+                <label class="control">
+                  <input class="visually-hidden control-input" type="radio" name="content-group" value="low-content">
+                  <span class="control-mark"></span>
+                  <span class="control-label">0%</span>
+                </label>
+              </li>
+              <li class="sorting-type-item">
+                <label class="control">
+                  <input class="visually-hidden control-input" type="radio" name="content-group" value="low-mid-content" checked>
+                  <span class="control-mark"></span>
+                  <span class="control-label">до 10%</span>
+                </label>
+              </li>
+              <li class="sorting-type-item">
+                <label class="control">
+                  <input class="visually-hidden control-input" type="radio" name="content-group" value="mid-content">
+                  <span class="control-mark"></span>
+                  <span class="control-label">до 30%</span>
+                </label>
+              </li>
+              <li class="sorting-type-item">
+                <label class="control">
+                  <input class="visually-hidden control-input" type="radio" name="content-group" value="high-content">
+                  <span class="control-mark"></span>
+                  <span class="control-label">выше 30%</span>
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+        </div>
+        <div class="sorting-wrapper sorting-wrapper-margin">
+          <fieldset class="sorting-type">
+            <legend class="sorting-type-title">Наполнители:</legend>
+            <ul class="sorting-type-list">
+              <li class="sorting-type-item">
+                <label class="control">
+                  <input class="visually-hidden control-input" type="checkbox" name="chocolate" checked>
+                  <span class="control-mark"></span>
+                  <span class="control-label">шоколадные</span>
+                </label>
+              </li>
+              <li class="sorting-type-item sorting-type-item-indent">
+                <label class="control">
+                  <input class="visually-hidden control-input" type="checkbox" name="sugar-powders" checked>
+                  <span class="control-mark"></span>
+                  <span class="control-label">сахарные посыпки</span>
+                </label>
+              </li>
+              <li class="sorting-type-item">
+                <label class="control">
+                  <input class="visually-hidden control-input" type="checkbox" name="fruits">
+                  <span class="control-mark"></span>
+                  <span class="control-label">фрукты</span>
+                </label>
+              </li>
+              <li class="sorting-type-item">
+                <label class="control">
+                  <input class="visually-hidden control-input" type="checkbox" name="syrups">
+                  <span class="control-mark"></span>
+                  <span class="control-label">сиропы</span>
+                </label>
+              </li>
+              <li class="sorting-type-item">
+                <label class="control">
+                  <input class="visually-hidden control-input" type="checkbox" name="jams">
+                  <span class="control-mark"></span>
+                  <span class="control-label">джемы</span>
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <button class="sorting-button" type="submit">Применить</button>
+        </div>
         <ul class="product-list product-list-catalog">
           <li class="product-item">
             <a class="product-item-link" href="#">
@@ -436,6 +435,7 @@
   <footer class="page-footer">
     <div class="page-footer-wrapper">
       <section class="footer-social">
+        <h4 class="visually-hidden">Мы в соц сетях</h4>
         <ul class="social-list footer-social-list">
           <li class="social-item">
             <a class="footer-social social-link social-link-vk" href="https://vk.com/htmlacademy">
@@ -455,6 +455,7 @@
         </ul>
       </section>
       <section class="footer-info">
+        <h4 class="visually-hidden">О нас</h4>
         <ul class="footer-info-list">
           <li class="footer-info-item">
             <a class="footer-info-link footer-supplier-link" href="#">Для поставщиков</a>
@@ -471,6 +472,7 @@
         </ul>
       </section>
       <section class="footer-copyright">
+        <h4 class="visually-hidden">Авторские права</h4>
         <img class="footer-logo-htmlacademy" src="img/logo-htmlacademy.svg" alt="Логотип htmlacademy" width="93" height="27">
         <p class="footer-copyright-text">Сделано в <a class="footer-copyright-link" aria-label="Ссылка на html academy">.html academy</a> © 2021</p>
       </section>
