--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
           <li class="navigation-item navigation-item-search">
             <a class="navigation-btn navigation-btn-active" href="#">
               <span class="visually-hidden">Поиск</span>
-              <form class="form-search form-search-active" action="https://echo.htmlacademy.ru/" method="post">
-                <label class="visually-hidden" for="search-field">Поле поиска</label>
-                <input class="navigation-search" type="search" name="search" id="search-field" placeholder="Поиск по сайту">
-              </form>
             </a>
+            <form class="form-search form-search-active" action="https://echo.htmlacademy.ru/" method="post">
+              <label class="visually-hidden" for="search-field">Поле поиска</label>
+              <input class="navigation-search" type="search" name="search" id="search-field" placeholder="Поиск по сайту">
+            </form>
           </li>
           <li class="navigation-item navigation-item-login">
             <a class="navigation-link navigation-login" href="#">Вход</a>
@@ -79,7 +79,7 @@
             <div class="slider-content slider-content-current">
               <h2 class="slider-content-title">Нежный пломбир <br>с клубничным джемом</h2>
               <p class="slider-content-description">Натуральное мороженое из свежих сливок<br> и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.</p>
-              <a class="btn btn-white" href="#">Заказать</a>
+              <a class="btn btn-white" href="#" aria-label="Заказать">Заказать</a>
             </div>
             <div class="slider-content">
               <h2 class="slider-content-title">Сливочное мороженое со вкусом банана</h2>
@@ -183,7 +183,7 @@
               <div class="offers-raspberry-wrapper">
                 <h4 class="offers-raspberry-title">Малинка даром!</h4>
                 <p class="offers-raspberry-description">При покупке 2 кг любого фруктового мороженого добавим в ваш заказ банку малинового варенья бесплатно.</p>
-                <a class="btn btn-white" href="#">Хочу подарок</a>
+                <a class="btn btn-white" href="#" aria-label="Хочу подарок">Хочу подарок</a>
               </div>
               <div class="offers-raspberry-wrapper">
                 <img class="offers-raspberry-image" src="img/basket-raspberries.png" alt="Корзинка с малиной" width="181" height="240">
@@ -193,7 +193,7 @@
               <div class="offers-marshmallow-wrapper">
                 <h4 class="offers-marshmallow-title">Маршмеллоу даром!</h4>
                 <p class="offers-marshmallow-description">При покупке 2 кг пломбира добавим в ваш заказ упаковку нежных зефирок совершенно бесплатно.</p>
-                <a class="btn btn-white" href="#">Хочу подарок</a>
+                <a class="btn btn-white" href="#" aria-label="Хочу подарок">Хочу подарок</a>
               </div>
               <div class="offers-marshmallow-wrapper">
                 <img class="offers-marshmallow-image" src="img/basket-marshmallows.png" alt="Корзинка с маршмеллоу" width="232" height="249">
@@ -284,16 +284,18 @@
         </section>
         <div class="blog-subscribe-wrapper">
           <article class="blog">
+            <h2 class="visually-hidden">Наш блог</h2>
             <p class="blog-title">Новое в нашем блоге</p>
             <a class="blog-link" href="#">10 способов сервировки фруктовых щербетов<br> к столу</a>
           </article>
           <section class="subscribe">
+            <h3 class="visually-hidden">Подпишитесь на нас</h3>
             <div class="subscribe-wrapper">
               <p class="subscribe-text">Подпишитесь на нашу сладкую рассылку и будьте всегда<br> в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
               <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
                 <label class="visually-hidden" for="subscribe-email">Email</label>
                 <input class="subscribe-form-field" type="email" id="subscribe-email" name="subscribe-email" placeholder="email@example.com" required>
-                <button class="btn btn-red" type="button">Отправить</button>
+                <button class="btn btn-red" type="button" aria-label="Отправить">Отправить</button>
               </form>
             </div>
           </section>
@@ -310,7 +312,7 @@
                 <span class="form-label form-label-icon">
                   <label for="delivery-date">Дата</label>
                   <button class="info" type="button">
-                    <p class="info-text">Введите дату доставки</p>
+                    <span class="info-text">Введите дату доставки</span>
                     <span class="visually-hidden">Посмотреть дополнительную информацию</span>
                   </button>
                 </span>
@@ -324,24 +326,25 @@
                 <span class="form-label form-label-icon">
                    <label for="delivery-address">Адрес</label>
                    <button class="info" type="button">
-                     <p class="info-text">Введите название улицы, дома и квартиры</p>
+                     <span class="info-text">Введите название улицы, дома и квартиры</span>
                     <span class="visually-hidden">Посмотреть дополнительную информацию</span>
                   </button>
                 </span>
                 <input type="text" id="delivery-address" name="delivery-address" placeholder="ул. Большая Конюшенная, 19/8">
               </p>
-              <button class="btn-red btn-delivery" type="button">Отправить</button>
+              <button class="btn-red btn-delivery" type="button" aria-label="Отправить">Отправить</button>
             </form>
           </div>
         </section>
         <section class="contacts">
+          <h4 class="visually-hidden">Наши контакты</h4>
           <div class="contacts-wrapper">
             <p class="contacts-text">Адрес главного офиса<br> и офлайн-магазина:</p>
             <address class="contacts-address">наб. реки Карповки, <br>5 лит П, Санкт-Петербург</address>
             <p class="contacts-text">Для заказов по телефону:</p>
             <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
             <p class="contacts-worktime">(с 10 до 20 ежедневно)</p>
-            <a class="btn btn-red contacts-btn" href="#">Форма обратной связи</a>
+            <a class="btn btn-red contacts-btn" href="#" aria-label="Форма обратной связи">Форма обратной связи</a>
           </div>
         </section>
       </div>
@@ -349,6 +352,7 @@
     <footer class="page-footer">
       <div class="page-footer-wrapper">
         <section class="footer-social">
+          <h4 class="visually-hidden">Мы в соц сетях</h4>
           <ul class="social-list footer-social-list">
             <li class="social-item">
               <a class="footer-social social-link social-link-vk" href="https://vk.com/htmlacademy">
@@ -368,6 +372,7 @@
           </ul>
         </section>
         <section class="footer-info">
+          <h4 class="visually-hidden">О нас</h4>
           <ul class="footer-info-list">
             <li class="footer-info-item">
               <a class="footer-info-link footer-supplier-link" href="#">Для поставщиков</a>
@@ -384,6 +389,7 @@
           </ul>
         </section>
         <section class="footer-copyright">
+          <h4 class="visually-hidden">Авторские права</h4>
           <img class="footer-logo-htmlacademy" src="img/logo-htmlacademy.svg" alt="Логотип htmlacademy" width="93" height="27">
           <p class="footer-copyright-text">Сделано в <a class="footer-copyright-link" aria-label="Ссылка на html academy">.html academy</a> © 2021</p>
         </section>
